# detra

./: .env.example  .gitignore  README.md  README_PYPI.md  idea.md  pyproject.toml  test_vertiguard_comprehensive.py
.github/workflows/: publish-pypi.yml
examples/: comprehensive_monitoring.py
examples/legal_analyzer/: app.py  detra.yaml  service.py  vertiguard.yaml
scripts/: export_datadog_configs.py  test_components.py  test_e2e.py  traffic_generator.py
src/detra/: __init__.py  client.py
src/detra/actions/: alerts.py  incidents.py  notifications.py
src/detra/agents/: monitor.py
src/detra/backends/: __init__.py  base.py  console.py  datadog.py  otel.py
src/detra/config/: __init__.py  defaults.py  loader.py  schema.py
src/detra/dashboard/: __init__.py  comprehensive_template.py
src/detra/decorators/: __init__.py  trace.py
src/detra/detection/: __init__.py  monitors.py  templates.py
src/detra/errors/: grouper.py  tracker.py
src/detra/evaluation/: classifiers.py  engine.py  gemini_judge.py  prompts.py
src/detra/judges/: __init__.py  base.py  litellm_judge.py
src/detra/optimization/: __init__.py  dspy_optimizer.py  root_cause.py
src/detra/security/: __init__.py
src/detra/telemetry/: __init__.py  datadog_client.py  events.py  llmobs_bridge.py  logs.py  metrics.py
src/detra/utils/: __init__.py  retry.py
src/vertiguard/: __init__.py  client.py
src/vertiguard/actions/: __init__.py  alerts.py  cases.py  incidents.py  notifications.py
src/vertiguard/config/: __init__.py  loader.py  schema.py
src/vertiguard/dashboard/: __init__.py  builder.py  templates.py
src/vertiguard/decorators/: __init__.py  trace.py
src/vertiguard/detection/: __init__.py  monitors.py
src/vertiguard/evaluation/: __init__.py  classifiers.py  engine.py  gemini_judge.py  prompts.py  rules.py
src/vertiguard/security/: __init__.py  scanners.py  signals.py
src/vertiguard/telemetry/: __init__.py  datadog_client.py  events.py  llmobs_bridge.py  metrics.py
src/vertiguard/utils/: __init__.py  retry.py  serialization.py
tests/: __init__.py  conftest.py  test_actions.py  test_client.py  test_config.py  test_decorators.py  test_evaluation.py  test_security.py  test_telemetry.py  test_utils.py  test_vertiguard_comprehensive.py
