[project]
name = "detra"
version = "0.2.0"
description = "LLM guardrails & observability -- pluggable backends, any-model evaluation"
readme = "README_PYPI.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "detra Contributors"},
]
keywords = [
    "llm",
    "observability",
    "guardrails",
    "evaluation",
    "opentelemetry",
    "datadog",
    "ai",
    "tracing",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

# ---------------------------------------------------------------------------
# Core deps -- intentionally minimal.  Vendor-specific packages live in extras.
# ---------------------------------------------------------------------------
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/adc77/detra"
Repository = "https://github.com/adc77/detra"
Documentation = "https://github.com/adc77/detra#readme"
Issues = "https://github.com/adc77/detra/issues"

# ---------------------------------------------------------------------------
# Optional extras -- install only what you need
# ---------------------------------------------------------------------------
[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]
datadog = [
    "ddtrace>=2.10.0",
    "datadog-api-client>=2.20.0",
    "datadog>=0.49.0",
    "certifi>=2024.2.2",
]
gemini = [
    "google-genai>=0.2.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
]
litellm = [
    "litellm>=1.0.0",
]
optimization = [
    "dspy-ai>=2.4.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
all = [
    "detra[otel,datadog,gemini,litellm,optimization,server,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
